# pyregress

./: .gitignore  README.md  __init__.py  features.py  gpr0.py  hyper_params.py  kernels.py  kernels_tests.py  lin_regress.py  multi_newton.py  piecewise_linear.py  pygpr0.py  pyproject.toml  pyregress0.py  rprop.py  sampling_test.py  test_pyregress.py  transforms.py
examples/: duplicate_data.py  lin_regress_convergence.py  one_hyper.py  sampling_demo.py  single_hyper.py  sum_kern_decomp.py  two_hyper.py  two_profile.py  verification_test.py
pyregress/: __init__.py  lin_regress.py  piecewise_linear.py
pyregress/gaussian_processes/: __init__.py  gaussian_process.py  kernels.py  transforms.py
pyregress/gaussian_processes/examples/: one_hyper.py  two_profile.py
src/pyregress/: __init__.py  lin_regress.py  piecewise_linear.py
src/pyregress/gaussian_processes/: __init__.py  gaussian_process.py  gp.py  hyper_params.py  kernels.py  transforms.py
src/pyregress/gaussian_processes/examples/: duplicate_data.py  sampling_demo.py
tests/: Borehole.py  feb2024.py  gp_test_utils.py  kernels_tests.py  kernels_tests_radial_grad.py  test_GPI.py  test_PolySet.py  test_kernels.py  transformations_test.py  verification_test.py
verification/: Borehole.py  Volcano.py  kernels_tests.py  kernels_tests_radial_grad.py  test_pyregress.py  transformations_test.py  verification_test.py
