[project]
name = "pyregress"
version = "0.5"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]
include = ["pyregress*"]  # ["*"] by default
exclude = ["tests*"]  # empty by default
namespaces = false  # true by default