[project]
name = "pyregress"
version = "0.9.5"
dependencies = [
    "numpy",
    "scipy",
    "numba",
]

[project.optional-dependencies]
plot = [
    "matplotlib",
]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]
# include = ["pyregress*"]  # ["*"] by default
# exclude = ["tests*"]  # empty by default
# namespaces = false  # true by default